# Computer-Graphics

./: README.md
Homework 01 - Immagini/: CMakeLists.txt  readme.html  readme.md
Homework 01 - Immagini/apps/: CMakeLists.txt
Homework 01 - Immagini/apps/ycolorgrade/: CMakeLists.txt  ycolorgrade.cpp
Homework 01 - Immagini/libs/yocto_colorgrade/: yocto_colorgrade.cpp  yocto_colorgrade.h
Homework 01 - Immagini/scripts/: run.sh
Homework 02 - Raytracing/apps/yraytrace/: yraytrace.cpp
Homework 02 - Raytracing/libs/yocto_raytrace/: yocto_raytrace.cpp  yocto_raytrace.h
Homework 03 - Modeling/: readme.html
Homework 03 - Modeling/apps/ymodel/: ymodel.cpp
Homework 03 - Modeling/libs/yocto_model/: yocto_model.cpp  yocto_model.h
Homework 03 - Modeling/scripts/: run.sh
Homework 04 - Animation/: CMakeLists.txt  readme.html  readme.md
Homework 04 - Animation/apps/: CMakeLists.txt
Homework 04 - Animation/apps/yparticle/: CMakeLists.txt  yparticle.cpp
Homework 04 - Animation/libs/yocto_gui/: yocto_glview.cpp
Homework 04 - Animation/libs/yocto_particle/: yocto_particle.cpp  yocto_particle.h
Homework 04 - Animation/scripts/: run-interative.bat  run-interative.sh  run.bat  run.sh
Homework 04 - Animation/tests/00_particles/: particles.json
Homework 04 - Animation/tests/01_particles/: particles.json
Homework 04 - Animation/tests/02_particles/: particles.json
Homework 04 - Animation/tests/03_cloth/: cloth.json
Homework 04 - Animation/tests/04_cloth/: cloth.json
